Rendering - French translation (#7847)
* Translate index.md via GitLocalize

* Translate index.md via GitLocalize

* Added an entry to the contributors section.

* Fixed the contributors file indentation.

* Reordered contributors file

* Rendering - post translation review

* Post review comments

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1717,6 +1717,22 @@ borissmus:
     - author
   email: smus@google.com
 
+antoinesolnichkin:
+  name:
+    given: Antoine
+    family: Solnichkin
+  org:
+    name: Independent
+    unit: Software Engineer
+  country: LU
+  role:
+    - translator
+  homepage: http://devconnected.com
+  twitter: devconnectedcom
+  email: solnichkin.antoine@gmail.com
+  description:
+    en: "Antoine is a Software Engineer based in Luxembourg"
+
 rsolomakhin:
   name:
     given: Rouslan
@@ -2044,6 +2060,3 @@ maciejzasada:
   role:
     - author
   email: maciej@unit9.com
-
-
-
