Periodic background sync OT.

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2060,3 +2060,16 @@ maciejzasada:
   role:
     - author
   email: maciej@unit9.com
+
+kenjibaheux:
+  name:
+    given: Kenji
+    family: Baheux
+  twitter: KenjiBaheux
+  github: KenjiBaheux
+  org:
+    name: Google
+    unit: Chrome
+  country: JPN
+  description:
+    en: "Product Manager at Google, working on Chrome/Web Platform"
