--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -103,6 +103,19 @@ adamargyle:
     en: Developer Advocate at Google
   country: US
 
+kenjibaheux:
+  name:
+    given: Kenji
+    family: Baheux
+  twitter: KenjiBaheux
+  github: KenjiBaheux
+  org:
+    name: Google
+    unit: Chrome
+  country: JPN
+  description:
+    en: "Product Manager at Google, working on Chrome/Web Platform"
+
 pbakaus:
   name:
     given: Paul
