--- a/src/data/announcement.yaml
+++ b/src/data/announcement.yaml
@@ -1,4 +1,4 @@
-enabled: false
+enabled: true
 description: >
     <style>
       .devsite-banner-announcement {
@@ -16,8 +16,7 @@ description: >
         margin-right: 8px;
       }
     </style>
-    Do you use responsive images, lazy loading, or other optimizations?
-    If not, why not? What affects your decisions? <br>
-    Answer a few simple questions to help us understand your needs, and
-    what we can do to make your life easier.
-    <a href="https://forms.gle/DJt35H2mdEe81Lae9">Get Started</a>
+    Have questions about images on the web? Tweet your questions to
+    <a href="https://twitter.com/chromiumdev">@ChromiumDev</a> with
+    <code>#AskChrome</code> and we'll answer the top questions in our next
+    <b>#AskChrome</b> episode on YouTube.
