--- a/src/content/en/site-kit/_project.yaml
+++ b/src/content/en/site-kit/_project.yaml
@@ -12,3 +12,21 @@ hide_ratings_widget: true
 google_analytics_ids:
   - UA-52746336-1
   - UA-130569087-3
+announcement:
+  description: |
+    <style>
+      .devsite-banner-announcement {
+        background-color: #e8f0fe;
+        color: #424242;
+
+      }
+      .devsite-banner-announcement :link,
+      .devsite-banner-announcement :visited {
+        background: #e8f0fe;
+        color: #039BE5;
+      }
+      .devsite-banner-announcement span.material-icons {
+        vertical-align: middle;
+        margin-right: 8px;
+      }
+    </style> Have questions about images on the web? Tweet your questions to <a href="https://twitter.com/chromiumdev">@ChromiumDev</a> with <code>#AskChrome</code> and we'll answer the top questions in our next <b>#AskChrome</b> episode on YouTube.
