with youtube video

--- a/src/content/en/_index.yaml
+++ b/src/content/en/_index.yaml
@@ -64,6 +64,7 @@ landing_page:
         Request your invite at the
         <a href="https://developer.chrome.com/devsummit/">Chrome Dev Summit
         2019 website</a>.
+    - youtube_id: nImH_dq1NpM
 
 
 
