--- a/src/content/en/tools/workbox/_project.yaml
+++ b/src/content/en/tools/workbox/_project.yaml
@@ -32,4 +32,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> Have questions about images on the web? Tweet your questions to <a href="https://twitter.com/chromiumdev">@ChromiumDev</a> with <code>#AskChrome</code> and we'll answer the top questions in our next <b>#AskChrome</b> episode on YouTube.
+    </style> Register for this year’s <b><code>#ChromeDevSummit</code></b> happening on Nov. 11-12 in San Francisco to learn about the latest features and tools coming to the Web. Request an invite on the <a href="https://developer.chrome.com/devsummit">Chrome Dev Summit 2019 website</a>
