CDS Watch Live Banner & Landing

--- a/src/content/en/_index.yaml
+++ b/src/content/en/_index.yaml
@@ -42,31 +42,10 @@ landing_page:
 
   rows:
 
-  - classname: devsite-landing-row-100 devsite-landing-row-large-headings  cds2019
+  - classname: devsite-landing-row-100
     background: grey
     items:
-    - heading: >
-        <img src="https://www.gstatic.com/images/branding/product/2x/chrome_96dp.png">
-        <div>
-          <div class="cds-header"><span class="cds-cr">chrome://</span>dev-summit</div>
-          <div class="cds-dates">
-            november <span class="cds-blue">11<sup>th</sup>-12<sup>th</sup></span> 2019
-          </div>
-          <div class="cds-loc">Yerba Buena Center for the Arts</div>
-          <div class="cds-city">San Francisco, CA</div>
-        </div>
-      description: >
-        Chrome Dev Summit registration is now open! Join us for our annual
-        developer conference at the Yerba Buena Center for the Arts in San
-        Francisco, CA on November 11-12, 2019. Over the two days, you’ll
-        learn about the latest tools and updates coming to the web platform
-        and hear directly from the Chrome product & engineering teams.
-        Request your invite at the
-        <a href="https://developer.chrome.com/devsummit/">Chrome Dev Summit
-        2019 website</a>.
     - youtube_id: nImH_dq1NpM
-
-
 
   - classname: wf-landing-row
     items:
