--- a/src/content/en/feedback/_project.yaml
+++ b/src/content/en/feedback/_project.yaml
@@ -33,4 +33,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> Register for this year’s <b><code>#ChromeDevSummit</code></b> happening on Nov. 11-12 in San Francisco to learn about the latest features and tools coming to the Web. Request an invite on the <a href="https://developer.chrome.com/devsummit">Chrome Dev Summit 2019 website</a>
+    </style> <b>Chrome Dev Summit 2019</b> is happening now and streaming live on YouTube. <a href="https://developer.chrome.com/devsummit/" class="gc-analytics-event" data-category="webFu" data-label="cds-banner-watch">Watch now</a>.
