--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "precommit": "gulp update-updated_on",
     "prepush": "npm test",
     "prestart": "gulp build",
-    "postinstall": "tools/update-resources.sh && gulp post-install"
+    "postinstall": "gulp post-install"
   }
 }
