--- a/src/content/en/_project.yaml
+++ b/src/content/en/_project.yaml
@@ -33,4 +33,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> <b>Chrome Dev Summit 2019</b> is happening now and streaming live on YouTube. <a href="https://developer.chrome.com/devsummit/" class="gc-analytics-event" data-category="webFu" data-label="cds-banner-watch">Watch now</a>.
+    </style> Can’t make the <code>#ChromeDevSummit</code> this year? Catch all the content (and more!) on the livestream, or join your peers for a CDS Extended event at a hosted location nearby. To learn more, check out the <a href="https://developer.chrome.com/devsummit/" class="gc-analytics-event" data-category="webFu" data-label="cds-banner-watch">Chrome Dev Summit 2019 website</a>.
