CDS Watch Live Banner & Landing (#8127)
* CDS Watch Live Banner & Landing

* CDS Banner 2

--- a/src/content/en/tools/workbox/_project.yaml
+++ b/src/content/en/tools/workbox/_project.yaml
@@ -32,4 +32,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> Register for this year’s <b><code>#ChromeDevSummit</code></b> happening on Nov. 11-12 in San Francisco to learn about the latest features and tools coming to the Web. Request an invite on the <a href="https://developer.chrome.com/devsummit">Chrome Dev Summit 2019 website</a>
+    </style> Can’t make the <code>#ChromeDevSummit</code> this year? Catch all the content (and more!) on the livestream, or join your peers for a CDS Extended event at a hosted location nearby. To learn more, check out the <a href="https://developer.chrome.com/devsummit/" class="gc-analytics-event" data-category="webFu" data-label="cds-banner-watch">Chrome Dev Summit 2019 website</a>.
