--- a/src/content/en/fundamentals/codelabs/_index.yaml
+++ b/src/content/en/fundamentals/codelabs/_index.yaml
@@ -18,10 +18,10 @@ landing_page:
       description: >
         In this codelab, you'll build a Progressive Web App, which loads quickly, even on flaky
         networks, has an icon on the homescreen, and loads as a top-level, full screen experience.
-      path: /web/fundamentals/codelabs/your-first-pwapp/
+      path: https://codelabs.developers.google.com/codelabs/your-first-pwapp/
       buttons:
       - label: Start
-        path: /web/fundamentals/codelabs/your-first-pwapp/
+        path: https://codelabs.developers.google.com/codelabs/your-first-pwapp/
         classname: button button-white
 
     - heading: Debugging Service Workers
