--- a/src/content/en/fundamentals/_redirects.yaml
+++ b/src/content/en/fundamentals/_redirects.yaml
@@ -3,6 +3,9 @@ redirects:
 - from: /web/fundamentals/codelabs/your-first-pwapp
   to: https://codelabs.developers.google.com/codelabs/your-first-pwapp/
 
+- from: /web/fundamentals/codelabs/web-serial
+  to: https://codelabs.developers.google.com/codelabs/web-serial/
+
 - from: /web/fundamentals/codelabs/your-first-pwapp/
   to: https://codelabs.developers.google.com/codelabs/your-first-pwapp/
 
