Update plugin examples to use new names

--- a/src/content/en/tools/workbox/_index.yaml
+++ b/src/content/en/tools/workbox/_index.yaml
@@ -153,10 +153,10 @@ landing_page:
         new workbox.strategies.CacheFirst({
           cacheName: 'google-fonts-webfonts',
           plugins: [
-            new workbox.cacheableResponse.Plugin({
+            new workbox.cacheableResponse.CacheableResponsePlugin({
               statuses: [0, 200],
             }),
-            new workbox.expiration.Plugin({
+            new workbox.expiration.ExpirationPlugin({
               maxAgeSeconds: 60 * 60 * 24 * 365,
             }),
           ],
@@ -186,7 +186,7 @@ landing_page:
         new workbox.strategies.CacheFirst({
           cacheName: 'images',
           plugins: [
-            new workbox.expiration.Plugin({
+            new workbox.expiration.ExpirationPlugin({
               maxEntries: 60,
               maxAgeSeconds: 30 * 24 * 60 * 60, // 30 Days
             }),
