Fixes blogpost location
- Moves twa-android-browser-helper.md from /updates/2020/ to
  /updates/2020/01/.

- Adds a Redirect from the old location to the new location.

--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -61,3 +61,7 @@ redirects:
 
 - from: /web/g-co/twa
   to: /web/updates/2017/10/using-twa
+
+- from: /web/updates/2020/twa-android-browser-helper
+  to: /web/updates/2020/01/twa-android-browser-helper
+  
