--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1787,7 +1787,7 @@ rsolomakhin:
   twitter: rsolomakhin
   email: rouslan@google.com
 
-ann40a:
+annasorokina:
   name:
     given: Anna
     family: Sorokina
