--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "gulp-remark": "^3.0.0",
     "husky": "^0.14.3",
     "inquirer": "^3.3.0",
-    "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/222e13a",
-    "workbox-build": "^4.3.1"
+    "jsdoc-baseline": "^0.1.5",
+    "workbox-build": "^5.0.0"
   },
   "private": true,
   "dependencies": {
