--- a/src/content/en/tools/workbox/_index.yaml
+++ b/src/content/en/tools/workbox/_index.yaml
@@ -136,35 +136,35 @@ landing_page:
       cache.</p>
 
       <pre class="prettyprint lang-javascript">
-      import {registerRoute} from 'workbox-routing';
-      import {CacheFirst, StaleWhileRevalidate} from 'workbox-strategies';
-      import {CacheableResponsePlugin} from 'workbox-cacheable-response';
-      import {ExpirationPlugin} from 'workbox-expiration';
+        import {registerRoute} from 'workbox-routing';
+        import {CacheFirst, StaleWhileRevalidate} from 'workbox-strategies';
+        import {CacheableResponsePlugin} from 'workbox-cacheable-response';
+        import {ExpirationPlugin} from 'workbox-expiration';
 
-      // Cache the Google Fonts stylesheets with a stale while revalidate strategy.
-      registerRoute(
-        /^https:\/\/fonts\.googleapis\.com/,
-        new StaleWhileRevalidate({
-          cacheName: 'google-fonts-stylesheets',
-        }),
-      );
+        // Cache the Google Fonts stylesheets with a stale while revalidate strategy.
+        registerRoute(
+          /^https:\/\/fonts\.googleapis\.com/,
+          new StaleWhileRevalidate({
+            cacheName: 'google-fonts-stylesheets',
+          }),
+        );
 
 
-      // Cache the Google Fonts webfont files with a cache first strategy for 1 year.
-      registerRoute(
-        /^https:\/\/fonts\.gstatic\.com/,
-        new CacheFirst({
-          cacheName: 'google-fonts-webfonts',
-          plugins: [
-            new CacheableResponsePlugin({
-              statuses: [0, 200],
-            }),
-            new ExpirationPlugin({
-              maxAgeSeconds: 60 * 60 * 24 * 365,
-            }),
-          ],
-        }),
-      );
+        // Cache the Google Fonts webfont files with a cache first strategy for 1 year.
+        registerRoute(
+          /^https:\/\/fonts\.gstatic\.com/,
+          new CacheFirst({
+            cacheName: 'google-fonts-webfonts',
+            plugins: [
+              new CacheableResponsePlugin({
+                statuses: [0, 200],
+              }),
+              new ExpirationPlugin({
+                maxAgeSeconds: 60 * 60 * 24 * 365,
+              }),
+            ],
+          }),
+        );
       </pre>
 
       <h3>Cache JavaScript and CSS</h3>
@@ -172,10 +172,10 @@ landing_page:
       while making sure they are updated in the background for the next use.</p>
 
       <pre class="prettyprint lang-javascript">
-      import {registerRoute} from 'workbox-routing';
-      import {StaleWhileRevalidate} from 'workbox-strategies';
+        import {registerRoute} from 'workbox-routing';
+        import {StaleWhileRevalidate} from 'workbox-strategies';
 
-      registerRoute(/\.(?:js|css)$/, new StaleWhileRevalidate());
+        registerRoute(/\.(?:js|css)$/, new StaleWhileRevalidate());
       </pre>
 
       <h3>Cache Images</h3>
@@ -184,22 +184,22 @@ landing_page:
       them indefinitely, consuming your users' storage.</p>
 
       <pre class="prettyprint lang-javascript">
-      import {registerRoute} from 'workbox-routing';
-      import {CacheFirst} from 'workbox-strategies';
-      import {ExpirationPlugin} from 'workbox-expiration';
+        import {registerRoute} from 'workbox-routing';
+        import {CacheFirst} from 'workbox-strategies';
+        import {ExpirationPlugin} from 'workbox-expiration';
 
-      registerRoute(
-        /\.(?:png|gif|jpg|jpeg|svg)$/,
-        new CacheFirst({
-          cacheName: 'images',
-          plugins: [
-            new ExpirationPlugin({
-              maxEntries: 60,
-              maxAgeSeconds: 30 * 24 * 60 * 60, // 30 Days
-            }),
-          ],
-        }),
-      );
+        registerRoute(
+          /\.(?:png|gif|jpg|jpeg|svg)$/,
+          new CacheFirst({
+            cacheName: 'images',
+            plugins: [
+              new ExpirationPlugin({
+                maxEntries: 60,
+                maxAgeSeconds: 30 * 24 * 60 * 60, // 30 Days
+              }),
+            ],
+          }),
+        );
       </pre>
 
       <h3>Precache your Files</h3>
@@ -209,29 +209,32 @@ landing_page:
       <div class="ds-selector-tabs">
         <section>
           <div class="kd-tabbutton">CLI</div>
-          <pre class="prettyprint lang-javascript">workbox wizard</pre>
+          <pre class="prettyprint lang-javascript">
+        workbox wizard</pre>
         </section>
         <section>
           <div class="kd-tabbutton">Node Module</div>
-          <pre class="prettyprint lang-javascript">const workboxBuild = require('workbox-build');
-      workboxBuild.generateSW({
-        swDest: './build/sw.js',
-        globDirectory: './app',
-        globPatterns: '**/*.{js,css,html,png}',
-      });</pre>
+          <pre class="prettyprint lang-javascript">
+        const {generateSW} = require('workbox-build');
+
+        generateSW({
+          swDest: './build/sw.js',
+          globDirectory: './app',
+          globPatterns: '**/*.{js,css,html,png}',
+        });</pre>
         </section>
         <section>
           <div class="kd-tabbutton">webpack</div>
-          <pre class="prettyprint lang-javascript">const WorkboxPlugin = require('workbox-webpack-plugin');
+          <pre class="prettyprint lang-javascript">
+        const {GenerateSW} = require('workbox-webpack-plugin');
 
-      // webpack config
-
-      {
-        plugins: [
-          // Other webpack plugins...
-          new WorkboxPlugin()
-        ]
-      }</pre>
+        module.exports = {
+          // Other webpack config...
+          plugins: [
+            // Other plugins...
+            new GenerateSW(),
+          ]
+        };</pre>
         </section>
       </div>
 
@@ -239,9 +242,9 @@ landing_page:
       <p>Want offline analytics for your offline PWA? No problem.</p>
 
       <pre class="prettyprint lang-javascript">
-      import {* as googleAnalytics} from 'workbox-google-analytics';
+        import * as googleAnalytics from 'workbox-google-analytics';
 
-      googleAnalytics.initialize();
+        googleAnalytics.initialize();
       </pre>
 
   - heading: "Workbox @ Chrome Dev Summit"
