[Translate ru] Accessibility -> focus (#6161)
* Translate index.md via GitLocalize

* Translate index.md via GitLocalize

* Translate index.md via GitLocalize

* Update _contributors.yaml

* Remove `google:` bit

Remove `google:` bit

* Reordered contributor entry

Reordered contributor entry

* Update _contributors.yaml

* Update index.md

Co-authored-by: mt-gitlocalize <mt@gitlocalize.com>
Co-authored-by: Ann40a <ann40a@yandex.ru>
Co-authored-by: Eiji Kitamura <agektmr@google.com>

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1787,6 +1787,18 @@ rsolomakhin:
   twitter: rsolomakhin
   email: rouslan@google.com
 
+annasorokina:
+  name:
+    given: Anna
+    family: Sorokina
+  org:
+    name: Independent
+    unit: Developer
+  country: BY
+  role:
+    - translator
+  email: ann40a@yandex.ru
+
 emilystark:
   name:
     given: Emily
