--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -973,7 +973,7 @@ wormwlrm:
   homepage: 'https://wormwlrm.github.io'
   email: wormwlrm@naver.com
   description:
-    en: Passionate junior front-end developer
+    en: Junior front-end developer
 
 kazukikanamori:
   name:
