--- a/src/content/en/android/_book.yaml
+++ b/src/content/en/android/_book.yaml
@@ -1,21 +1,20 @@
 upper_tabs:
-  - include: /web/_upper_tabs-Fundamentals.yaml
-  - include: /web/_upper_tabs-Tools.yaml  
-  - include: /web/_upper_tabs-Updates.yaml
-  - include: /web/_upper_tabs-Showcase.yaml
-  - name: Android
-    heading: Android
-    path: /web/android/
-    lower_tabs:
-      other:
-      - name: Home
-        contents:
-        - title: Home
-          path: /web/android/
-      - name: Trusted Web Activity
-        contents:
-          - include: /web/android/trusted-web-activity/_toc.yaml
-      - name: Custom Tabs
-        contents:
-          - include: /web/android/custom-tabs/_toc.yaml
-          
+- include: /web/_upper_tabs-Fundamentals.yaml
+- include: /web/_upper_tabs-Tools.yaml
+- include: /web/_upper_tabs-Updates.yaml
+- include: /web/_upper_tabs-Showcase.yaml
+- name: Android
+  heading: Android
+  path: /web/android/
+  lower_tabs:
+    other:
+#    - name: Home
+#      contents:
+#      - title: Home
+#        path: /web/android/
+    - name: Trusted Web Activity
+      contents:
+      - include: /web/android/trusted-web-activity/_toc.yaml
+#      - name: Custom Tabs
+#        contents:
+#          - include: /web/android/custom-tabs/_toc.yaml
