--- a/src/content/en/feedback/_book.yaml
+++ b/src/content/en/feedback/_book.yaml
@@ -14,4 +14,5 @@ upper_tabs:
         - title: How to File a Good Bug
           path: /web/feedback/file-a-bug
         - title: Browser Bug Searcher
-          path: /web/feedback/browser-bug-searcher
+          path: https://browser-issue-tracker-search.appspot.com/
+          status: external
