Redirect the Promises guide to web.dev

--- a/src/content/en/fundamentals/_redirects.yaml
+++ b/src/content/en/fundamentals/_redirects.yaml
@@ -163,3 +163,7 @@ redirects:
 
 - from: /web/fundamentals/design-and-ux/input/
   to: /web/fundamentals/design-and-ux/input/forms/
+
+- from: /web/fundamentals/primers/promises
+  to: https://web.dev/promises
+  
