Mark the Promises guide entry in the ToC as external

--- a/src/content/en/fundamentals/_toc-base.yaml
+++ b/src/content/en/fundamentals/_toc-base.yaml
@@ -13,6 +13,7 @@ toc:
       path: /web/fundamentals/primers/modules
     - title: Promises
       path: /web/fundamentals/primers/promises
+      status: external
     - title: Service Workers
       section:
       - title: Overview
