Redirect the HTTPS overview

--- a/src/content/en/fundamentals/security/_redirects.yaml
+++ b/src/content/en/fundamentals/security/_redirects.yaml
@@ -14,3 +14,6 @@ redirects:
 
 - from: /web/fundamentals/security/credential-management/store-credentials
   to: /web/fundamentals/security/credential-management/save-forms#store_the_credential
+
+- from: /web/fundamentals/security/encrypt-in-transit/why-https
+  to: https://web.dev/why-https-matters
