Clean up redirect logic

--- a/src/content/en/fundamentals/primers/_redirects.yaml
+++ b/src/content/en/fundamentals/primers/_redirects.yaml
@@ -8,3 +8,6 @@ redirects:
 
 - from: /web/fundamentals/primers/
   to: /web/fundamentals/
+
+- from: /web/fundamentals/primers/promises
+  to: https://web.dev/promises
