Redirect the Promises guide to web.dev (#8613)

--- a/src/content/en/fundamentals/_toc-base.yaml
+++ b/src/content/en/fundamentals/_toc-base.yaml
@@ -12,7 +12,8 @@ toc:
     - title: Modules
       path: /web/fundamentals/primers/modules
     - title: Promises
-      path: /web/fundamentals/primers/promises
+      path: https://web.dev/promises
+      status: external
     - title: Service Workers
       section:
       - title: Overview
